# philosophers

./: CMakeLists.txt  README.md  a.out  ft_atoi.c  ft_putstr_fd.c  main.c  philo_init.c  philo_life_circle.c  philo_print.c  philo_time.c  philosophers_header.h
a.out.dSYM/Contents/Resources/DWARF/: a.out
philo_one/: Makefile  a.out  ft_atoi.c  ft_itoa.c  main.c  philo_init.c  philo_life_circle.c  philo_print.c  philo_time.c  philosophers_header.h  philosophers_header.h.gch
philo_three/: Makefile  a.out  ft_atoi.c  main.c  philo_init.c  philo_life_circle.c  philo_three  philo_time.c  philosophers_header.h
philo_three/ph_1.dSYM/Contents/: Info.plist
philo_three/ph_1.dSYM/Contents/Resources/DWARF/: ph_1
philo_two/: Makefile  a.out  ft_atoi.c  ft_itoa.c  main.c  philo_init.c  philo_life_circle.c  philo_time.c  philosophers_header.h
philo_two/a.out.dSYM/Contents/Resources/DWARF/: a.out
